--- a/develop/cli-ubuntu/Dockerfile
+++ b/develop/cli-ubuntu/Dockerfile
@@ -1,5 +1,5 @@
 # Build OpenRCT2
-FROM debian:bullseye-slim AS build-env
+FROM ubuntu:20.04 AS build-env
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
  && apt-get install --no-install-recommends -y git cmake pkg-config ninja-build clang-10 duktape-dev libsdl2-dev libspeexdsp-dev libjansson-dev libcurl4-openssl-dev libcrypto++-dev libfontconfig1-dev libfreetype6-dev libpng-dev libzip-dev libssl-dev libicu-dev \
@@ -17,11 +17,11 @@ RUN git -c http.sslVerify=false clone --depth 1 -b $OPENRCT2_REF https://github.
  && rm /openrct2-install/usr/lib/libopenrct2.a
 
 # Build runtime image
-FROM debian:bullseye-slim
+FROM ubuntu:20.04
 # Install OpenRCT2
 COPY --from=build-env /openrct2-install /openrct2-install
 RUN apt-get update \
- && apt-get install --no-install-recommends -y rsync ca-certificates libduktape205 libjansson4 libpng16-16 libzip4 libcurl4 libfreetype6 libfontconfig1 libicu67 \
+ && apt-get install --no-install-recommends -y rsync ca-certificates libduktape205 libjansson4 libpng16-16 libzip5 libcurl4 libfreetype6 libfontconfig1 libicu66 \
  && rm -rf /var/lib/apt/lists/* \
  && rsync -a /openrct2-install/* / \
  && rm -rf /openrct2-install \
