--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ variables:
 
 stages:
     - build
-    - deploy
 
 variables:
     BRANCH: "develop"
@@ -22,17 +21,12 @@ ubuntu-image:
 debian-image:
     stage: build
     script:
-        - docker build --build-arg "OPENRCT2_REF=$BRANCH" -t "corysanin/openrct2-cli:$TAG-debian" -t "corysanin/openrct2-cli:$TAG" -f ./develop/cli-debian/Dockerfile .
+        - docker build --build-arg "OPENRCT2_REF=$BRANCH" -t "corysanin/openrct2-cli:$TAG-debian" -t "corysanin/openrct2-cli:$TAG" -t "$CI_REGISTRY_IMAGE" -f ./develop/cli-debian/Dockerfile .
         - "if [ ! -z ${DOCKER_PASSWORD+x} ]; then echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin; docker push \"corysanin/openrct2-cli:$TAG-debian\"; docker push \"corysanin/openrct2-cli:$TAG\"; fi"
+        - if [ ! -z ${CI_REGISTRY_PASSWORD+x} ]; then echo "$CI_REGISTRY_PASSWORD" | docker login "$CI_REGISTRY" -u "$CI_REGISTRY_USER" --password-stdin; docker push "$CI_REGISTRY_IMAGE"; fi
 
 alpine-image:
     stage: build
     script:
         - docker build --build-arg "OPENRCT2_REF=$BRANCH" -t "corysanin/openrct2-cli:$TAG-alpine" -f ./develop/cli-alpine/Dockerfile .
         - "if [ ! -z ${DOCKER_PASSWORD+x} ]; then echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin; docker push \"corysanin/openrct2-cli:$TAG-alpine\"; fi"
-
-# this step exists to trigger the deploy webhook
-deploy:
-    stage: deploy
-    script:
-        - "echo 'images successfully pushed to corysanin/openrct2-cli'"
