add nlohmann-json to all images

--- a/develop/cli-alpine/Dockerfile
+++ b/develop/cli-alpine/Dockerfile
@@ -1,7 +1,7 @@
 # Build OpenRCT2
 FROM alpine:edge AS build-env
 RUN apk update \
- && apk add git gcc g++ make cmake jansson-dev libzip-dev curl-dev libressl-dev sdl2-dev speexdsp-dev fontconfig-dev fts-dev icu-dev musl-dev linux-headers \
+ && apk add git gcc g++ make cmake nlohmann-json libzip-dev curl-dev libressl-dev sdl2-dev speexdsp-dev fontconfig-dev fts-dev icu-dev musl-dev linux-headers \
  && apk add duktape-dev --update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
  && rm -rf /var/cache/apk/*
 
@@ -18,7 +18,7 @@ RUN git -c http.sslVerify=false clone --depth 1 -b $OPENRCT2_REF https://github.
 FROM alpine:edge
 COPY --from=build-env /openrct2-install /openrct2-install
 RUN apk update && apk upgrade \
- && apk add rsync ca-certificates jansson libpng libzip libcurl freetype fontconfig icu \
+ && apk add rsync ca-certificates libpng libzip libcurl freetype fontconfig icu \
  && apk add duktape --update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
  && rm -rf /var/cache/apk/* \
  && rsync -a /openrct2-install/* / \
