--- a/develop/cli-alpine/Dockerfile
+++ b/develop/cli-alpine/Dockerfile
@@ -1,9 +1,6 @@
 # Build OpenRCT2
 FROM alpine:edge AS build-env
-RUN apk update \
- && apk add git gcc g++ make cmake nlohmann-json libzip-dev curl-dev libressl-dev sdl2-dev speexdsp-dev fontconfig-dev fts-dev icu-dev musl-dev linux-headers \
- && apk add duktape-dev --update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
- && rm -rf /var/cache/apk/*
+RUN apk add --no-cache git gcc g++ make cmake duktape-dev nlohmann-json libzip-dev curl-dev libressl-dev sdl2-dev speexdsp-dev fontconfig-dev fts-dev icu-dev musl-dev linux-headers
 
 ARG OPENRCT2_REF=develop
 WORKDIR /openrct2
@@ -17,10 +14,7 @@ RUN git -c http.sslVerify=false clone --depth 1 -b $OPENRCT2_REF https://github.
 # Build runtime image
 FROM alpine:edge
 COPY --from=build-env /openrct2-install /openrct2-install
-RUN apk update && apk upgrade \
- && apk add rsync ca-certificates libpng libzip libcurl freetype fontconfig icu \
- && apk add duktape --update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
- && rm -rf /var/cache/apk/* \
+RUN apk add --no-cache rsync ca-certificates libpng libzip libcurl duktape freetype fontconfig icu \
  && rsync -a /openrct2-install/* / \
  && rm -rf /openrct2-install \
  && openrct2-cli --version \
