--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ alpine-image:
     stage: build
     before_script:
         - docker buildx create --use
+        - "update-binfmts --enable"
     script:
         - docker buildx build --build-arg "OPENRCT2_REF=$BRANCH" -t "corysanin/openrct2-test:$TAG-alpine" -f ./develop/cli-alpine/Dockerfile .
         - "if [ \"test\" ]; then echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin; docker buildx build --push --build-arg \"OPENRCT2_REF=$BRANCH\" -t \"corysanin/openrct2-test:$TAG-alpine\" -f ./develop/cli-alpine/Dockerfile .; fi"
